k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pop-stats
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  #externalTrafficPolicy: Local
  ports:
  - name: http
    port: 8080
  selector:
    app: pop-stats
  type: ClusterIP
